[package]
name = "drift_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
bytemuck = { version = "1.4.0" }
clearing-house = { path = "../../deps/protocol-v1/programs/clearing_house", features = ["cpi"] }